train-2012.11.23:
  * New selenium tests authored in node.js merged.
  * Verifier rejects requests that don't supply a proper hostname: bug #806577
  * (hotfix 2012.12.03) nodejs version in .spec file >= 0.8.12
  * (hotfix 2012.12.05) when an email is re-staged, ensure the latest password is used: issue #2822
  * (hotfix 2012.12.11) verifier default port number fix

train-2012.11.09:
  * code cleanup, including jshinting of source and code coverage: #2643, #2272
  * principal domain now supplied as a query argument when fetching .well-known documents: #2565
  * embedded IE running in compat mode (like in Lotus Notes) now works for email verification: #2566

train-2012.10.26:
  * Upgrade to Node.JS 0.8.12
  * Fix redirect to /signin after email verification & unneeded password prompt: #1682
  * Improved handling of uncaught exceptions: #2440
  * Enable debug mode in development: #2175
  * Fix regression: ephemeral deployments properly serve static resources: #2588
  * Repair email delivery: #2589
  * Image optimization: #2596
  * Fix race conditions in internal.get() API: #2580
  * Dialog startup performance improvments: #2604, #2624
  * Now compatible with Firefox Password Manager: #314
  * Test fixes: #2619, #2632
  * Update lockdown: #2572
  * Improved user-facing language: #2600
  * .well-known fetch timeout shortened to 8s: #2603, #2636
  * "Dynamic well-known" support: upon fetch of .well-known, domain of email address passed as a get parameter: #2078
  * Fix class of sporatic dialog stalls at "Connection to Persona": #2629
  * Fix regression: "Dialog fails to show authenticate screen on Android": #2638
  * Fix regression: siteName not being displayed in dialog: #2634
  * (hotfix 2012.11.05) fix missing CONTRIBUTORS and renaming of en-US: #2682

train-2012.10.12:
  * Fix IE failing when authenticating with IdP from main site's /signin: #2287
  * Added CONTRIBUTORS file, served as /humans.txt: #2411