@@ -8,8 +8,8 @@ BrowserID.Network = (function() {
   var jwcrypto = require("./lib/jwcrypto"),
       bid = BrowserID,
       complete = bid.Helpers.complete,
-      context,
       server_time,
+      context,
       domain_key_creation_time,
       auth_status,
       code_version,
